feat(service-auth): create HRMS employees
